only show accepted users in dto